# vor3d

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.txt
.cache/clangd/index/: algebra.c.0A0C55696C5D833A.idx  algebra.h.31999049646971AF.idx  array_operations.c.06B8DF67E5BB6570.idx  array_operations.h.E4F49FA51B79E680.idx  bpoly.c.D5F7463D694C9CA1.idx  bpoly.h.39E0BBF76313D01A.idx  convhull_3d.c.0F3460D100DA4293.idx  convhull_3d.h.BE1195E1DC87B087.idx  delaunay.h.EC5D8F299E975A95.idx  dt_3d_incremental.c.FB5FD6C6828276CE.idx  dt_3d_incremental.h.02288675E509FC3E.idx  geometry.c.BAEE3D4EA7998A9B.idx  geometry.h.8D1A136D18BCA895.idx  poisson_disk.h.3142A450E08697CF.idx  predicates.h.915FF19A3A926450.idx  simplical_complex.c.35941321A16389C3.idx  simplical_complex.h.3032CE8DD9B32EA9.idx  vd_3d.c.5F46570F6909726A.idx  vd_3d.h.6C94D2A563C6DA8A.idx  vdiagram.h.4EA29B0CDE8FA151.idx  voronoi.c.5B2617BF1B31CDA1.idx  voronoi.h.38DF65C55D481EB2.idx
example/: CMakeLists.txt  Makefile  bp.m  bp_points.csv  bp_points.txt.aux  compile_flags.txt  dynarray.h  example  example.c  example_ashape.c  example_basic.c  example_bug_coplanar.c  example_lobe.c  example_lungs.c  example_medax.c  example_merge_orphans.c  example_nonconvex.c  example_volsph.c  prob.m  prob_points.csv  problematic_sphere.csv  review.m  seeds.csv  seeds_and_mirrors.csv  test_seeds.txt  test_voronoi  test_voronoi.c  testing.asv  testing.m  v2.m
example/lobes/: L.txt  LI.txt  LS.txt  R.txt  RI.txt  RM.txt  RS.txt
example/virtual_population/: L_13yo.txt  L_3yo.txt  L_8yo.txt  L_adult.txt  R_13yo.txt  R_3yo.txt  R_8yo.txt  R_adult.txt
geometric_predicates/: CMakeLists.txt
geometric_predicates/demos/: cmake_install.cmake
geometric_predicates/src/: Makefile  cmake_install.cmake
geometric_predicates/src/Predicates/: PredicatesLibTargets.cmake
geometric_predicates/test/: CTestTestfile.cmake  cmake_install.cmake
include/: algebra.h  ashape.h  bpoly.h  convh.h  delaunay.h  geometry.h  gnuplotc.h  lists.h  medax.h  mirroring.h  scplx.h  simplical_complex.h  vdiagram.h  volsph.h  vor3d.h  voronoi.h
src/: LP.h  UF.h  acplx.c  algebra.c  algebra.h  array.c  array.h  array_operations.c  ashape.c  bpoly.c  cdt.c  cdt_predicates.cpp  cdt_predicates.h  clip_lp.h  convh.c  delaunay.c  delaunay_constrained.c  dt.c  dt_3d_incremental.c  dt_predseam.h  dynarray.h  geometry.c  gnuplotc.c  hash.h  linalg.h  lists.c  lists.h  medax.c  mirroring.c  ncvx.c  random.h  scplx.c  simplical_complex.c  surf_vkey.h  vd_3d.c  vdiagram.c  volsph.c  vor3d.c  voronoi.c
